[package]
name = "magiccrypt"
version = "5.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/magiclen/node-magiccrypt"
homepage = "https://magiclen.org/aes/"
keywords = ["nodejs", "aes", "des", "encrypt", "decrypt"]
categories = []
description = "MagicCrypt is a Java/PHP/NodeJS/Rust library to encrypt/decrypt strings, files, or data, using Data Encryption Standard(DES) or Advanced Encryption Standard(AES) algorithms. It supports CBC block cipher mode, PKCS5 padding and 64, 128, 192 or 256-bits key length. If the encrypted data is a string, it will be formatted automatically to Base64."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
napi = "2"
napi-derive = "2"

crc-any = "2"
digest = "0.10"
md-5 = "0.10"
tiger = "0.2"
sha2 = "0.10"

[build-dependencies]
napi-build = "2"